# ip2loc

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
ip2loc/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
mapper/: apps.py  models.py  serializers.py  urls.py  views.py
mapper/migrations/: 0001_initial.py
mapper/tests/: conftest.py  factories.py  test_serializers.py  test_views.py
