[tool.poetry]
name = "ip2loc"
version = "0.1.0"
description = ""
authors = ["kuchichan <pawel.kucharski@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
django-environ = "^0.4.5"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-django = "^4.1.0"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
